<resources>
    <string name="app_name">Play O/L</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cool_image_button">Cool image button</string>

    <string name="google_client_id">505349873428-ms6gevhp2b2l0v5o7t60qhj34fnke6nt.apps.googleusercontent.com</string>
    <string name="login_error">Couldn\'t complete login. Please try again!</string>

    <string name="permission_message">You need to allow access permissions for app usage</string>
    <string name="cam_permission">Camera permission required to scan QR code</string>
    <string name="ok_text">OK</string>
    <string name="cancel_text">Cancel</string>

    <string name="incorrect_grade_toast">Incorrect SDcard is used. Please check and try again!</string>
    <string name="first_video_toast">This is the first video!</string>
    <string name="last_video_toast">This is the last video!</string>

    <string name="loading">Loading...</string>
    <string name="dob">Date of Birth</string>
    <string name="home_address">Home Address</string>
    <string name="city">City</string>
    <string name="district">District</string>
    <string name="gender">Gender</string>
    <string name="phone_number">Phone Number</string>
    <string name="school">School</string>
    <string name="update_details">UPDATE DETAILS</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>
    <string name="grade_hint">Select grade</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="activate">Activate</string>
    <string name="subscription_code">Add Code</string>
    <string name="grade">Grade</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="lessons">Lessons</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="privacy_consent">I agree to share these details with PlayOL</string>
    <string name="revision">O/L Revision</string>
    <string name="revision_year">%1$s Revision</string>
    <string name="video_speed">1.0x</string>

</resources>