<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".views.login.UserDetailFragment"
    android:background="@drawable/background"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/main_logo"
            android:layout_width="140dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="48dp"
            android:background="@drawable/main_logo"
            android:contentDescription="@string/cool_image_button"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textColorHint="@color/colorHint"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@id/main_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textfield_rounded"
                android:inputType="text"
                android:paddingBottom="10dp"
                android:paddingTop="15dp"
                android:paddingHorizontal="15dp"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:fontFamily="@font/modernhead"
                android:autofillHints="address"
                android:enabled="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            android:textColorHint="@color/colorHint"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@id/name_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/email_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textfield_rounded"
                android:inputType="textEmailAddress"
                android:paddingBottom="10dp"
                android:paddingTop="15dp"
                android:paddingHorizontal="15dp"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:fontFamily="@font/modernhead"
                android:autofillHints="address"
                android:enabled="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/dob_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="27dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/email_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/dob_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_of_birth"
                android:layout_marginStart="12dp"
                android:textSize="10sp"
                android:fontFamily="@font/modernhead"
                android:textColor="@color/colorHint"/>

            <TextView
                android:id="@+id/dob_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textfield_rounded"
                android:paddingBottom="10dp"
                android:paddingTop="15dp"
                android:paddingHorizontal="15dp"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:fontFamily="@font/modernhead"
                android:hint="@string/dob"
                android:textColorHint="@color/colorHint"/>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/home_address"
            android:textColorHint="@color/colorHint"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@id/dob_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/address_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textfield_rounded"
                android:inputType="text"
                android:paddingBottom="10dp"
                android:paddingTop="15dp"
                android:paddingHorizontal="15dp"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:fontFamily="@font/modernhead"
                android:autofillHints="address" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/city_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            android:textColorHint="@color/colorHint"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@id/address_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/city_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textfield_rounded"
                android:inputType="text"
                android:paddingBottom="10dp"
                android:paddingTop="15dp"
                android:paddingHorizontal="15dp"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:fontFamily="@font/modernhead"
                android:autofillHints="city" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/district_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="27dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/city_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/district_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/district"
                android:layout_marginStart="12dp"
                android:textSize="10sp"
                android:fontFamily="@font/modernhead"
                android:textColor="@color/colorHint"/>

            <Spinner
                android:id="@+id/district_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textfield_rounded"/>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contact_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:textColorHint="@color/colorHint"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@id/district_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/contact_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textfield_rounded"
                android:inputType="phone"
                android:paddingBottom="10dp"
                android:paddingTop="15dp"
                android:paddingHorizontal="15dp"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:fontFamily="@font/modernhead"
                android:autofillHints="contact,phone" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/school_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/school"
            android:textColorHint="@color/colorHint"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@id/contact_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/school_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textfield_rounded"
                android:inputType="text"
                android:paddingBottom="10dp"
                android:paddingTop="15dp"
                android:paddingHorizontal="15dp"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:fontFamily="@font/modernhead"
                android:autofillHints="" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/grade_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="27dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/school_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/grade_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grade"
                android:layout_marginStart="12dp"
                android:textSize="10sp"
                android:fontFamily="@font/modernhead"
                android:textColor="@color/colorHint"/>

            <Spinner
                android:id="@+id/grade_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textfield_rounded"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_update_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="40dp"
            android:paddingVertical="10dp"
            android:paddingHorizontal="30dp"
            android:layout_gravity="center"
            android:background="@drawable/fully_rounded_white"
            android:text="@string/update_details"
            android:textColor="@color/text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/grade_layout"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>