<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ActivationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/background">

        <ImageView
            android:id="@+id/main_logo"
            android:layout_width="140dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="48dp"
            android:background="@drawable/main_logo"
            android:contentDescription="@string/cool_image_button"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@id/main_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/subscription_code"
                android:textColorHint="@color/colorHint"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp">

                <EditText
                    android:id="@+id/name_field"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/textfield_half_round"
                    android:inputType="text"
                    android:paddingBottom="10dp"
                    android:paddingTop="15dp"
                    android:paddingHorizontal="15dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"
                    android:fontFamily="@font/modernhead"
                    android:autofillHints="address"
                    android:enabled="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_qr_scan"
                android:background="@drawable/end_button"
                android:layout_width="50dip"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom">
            </Button>

        </LinearLayout>

        <Button
            android:id="@+id/btn_activate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:background="@drawable/fully_rounded_white"
            android:paddingVertical="10dp"
            android:paddingHorizontal="40dp"
            android:text="@string/activate"
            android:textColor="@color/playColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>